--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
     "tests"
   ],
   "dependencies": {
+    "datatables": "DataTables#~1.10.9",
+    "datatables-responsive": "~1.0.7",
     "footable": "~2.0.3"
   }
 }
