--- a/package.json
+++ b/package.json
@@ -4,31 +4,25 @@
   "description": "Auctions and Auction Items plugin for WordPress.",
   "main": "style.css",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run sass:prod",
+    "build:css": "npm-run-all --parallel sass:*",
+    "sass:dev": "sass --update --style=expanded lib/scss:lib/css",
+    "sass:prod": "sass --update --no-source-map --style=compressed lib/scss:lib/dist",
+    "watch:css": "onchange 'lib/scss/assets/*.scss' -- npm run build:css",
+    "watch": "npm-run-all --parallel watch:*"  
   },
   "author": "Michael Wender",
   "license": "GPLv2",
   "devDependencies": {
-    "autoprefixer": "^10.3.1",
-    "chokidar-cli": "^2.1.0",
+    "globcat": "^3.1.1",
     "grunt": "^1.3.0",
     "grunt-wp-i18n": "^1.0.3",
     "grunt-wp-readme-to-markdown": "^2.0.1",
-    "node-sass-chokidar": "^1.5.0",
     "npm-check-updates": "^11.8.3",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^8.3.1"
-  },
-  "scripts": {
-    "build-task:scss-compile": "node-sass-chokidar --source-map true lib/scss/ -o lib/css",
-    "build-task:autoprefixer": "postcss lib/css/*.css --use autoprefixer -d lib/css",
-    "development:browsersync": "browser-sync start --proxy 'https://caseantiques.local' --files 'lib/css/*.css' 'lib/html/*.*' 'lib/fns/*.*' 'lib/js/*.js'",
-    "development:build": "npm-run-all -p build-task:*",
-    "development:watch": "chokidar 'lib/scss/**/*.scss' -c 'npm run development:build'",
-    "production:scss-compile": "node-sass-chokidar lib/scss/ -o lib/dist --output-style compressed ",
-    "production:autoprefixer": "postcss lib/dist/*.css --no-map --use autoprefixer -d lib/dist",
-    "dev": "npm-run-all -p development:*",
-    "prod": "npm-run-all -p production:*",
-    "devbuild": "npm-run-all -p build-task:*"
+    "onchange": "^7.1.0",
+    "parcel-bundler": "^1.12.5",
+    "sass": "^1.85.1",
+    "uglify": "^0.1.5"
   }
 }
