--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "a5hleyrich/wp-background-processing": "^1.0",
         "zordius/lightncandy": "^1.2"
     },
-    "version": "1.9.x-dev",
+    "version": "2.x.x-dev",
     "authors": [
         {
             "name": "Michael Wender",
