Updating author email

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "authors": [
         {
             "name": "Michael Wender",
-            "email": "michael@michaelwender.com"
+            "email": "mwender@wenmarkdigital.com"
         }
     ]
 }
